Corrected typo in about info

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,7 @@
               <h2>About Landing-Page</h2>
               -->
       <br />
-      <p>Reliable, friendly and creative gardening servies from a passionate gardener.</p>
+      <p>Reliable, friendly and creative gardening services from a passionate gardener.</p>
       <p>Covering the Richmond, Kew, Twickenham and Kingston areas.</p>
       <br />
     </div>
